[gd_scene load_steps=3 format=3 uid="uid://biqxo61i0srac"]

[ext_resource type="Script" path="res://demo_scene.gd" id="1_8s7co"]
[ext_resource type="Script" path="res://addons/godot_tree_table/Table.gd" id="1_e8dit"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8s7co")

[node name="Table" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 64.0
offset_top = 60.0
offset_right = -65.0
offset_bottom = 410.0
grow_horizontal = 2
script = ExtResource("1_e8dit")
header_row = Array[String](["Surname", "Last name", "Age", "Birthday"])
header_width = Array[int]([150, 200, 75, -1])
table = Array[Array]([["Anna", "John", "28", "25.04."], ["Will", "Smith", "22", "01.12."], ["Tim", "Potter", "25", "04.08."], ["Jack", "Amber", "19", "12.06."], ["----", "----", "----", "----"]])
table_select_mode = 0
table_allow_reselect = true
header_color = Color(0.36702, 0.34604, 0.0591146, 1)

[node name="add_btn" type="Button" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 520.0
offset_right = 239.0
offset_bottom = 580.0
text = "Add row"

[node name="remove_last_btn" type="Button" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = 520.0
offset_right = 478.0
offset_bottom = 580.0
text = "remove last row"

[node name="remove_row_at_btn" type="Button" parent="."]
layout_mode = 0
offset_left = 538.0
offset_top = 460.0
offset_right = 717.0
offset_bottom = 520.0
text = "remove row at"

[node name="index_input" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 588.0
offset_top = 535.0
offset_right = 671.063
offset_bottom = 566.0
rounded = true
alignment = 2

[node name="auto_reload_test_btn" type="Button" parent="."]
layout_mode = 0
offset_left = 777.0
offset_top = 520.0
offset_right = 956.0
offset_bottom = 580.0
text = "apped array"

[connection signal="CLICK_CELL_DATA" from="Table" to="." method="_on_table_click_cell_data"]
[connection signal="CLICK_CELL_POS" from="Table" to="." method="_on_table_click_cell_pos"]
[connection signal="CLICK_ROW" from="Table" to="." method="_on_table_click_row"]
[connection signal="CLICK_ROW_INDEX" from="Table" to="." method="_on_table_click_row_index"]
[connection signal="DOUBLE_CLICK" from="Table" to="." method="_on_table_double_click"]
[connection signal="pressed" from="add_btn" to="." method="_on_add_btn_pressed"]
[connection signal="pressed" from="remove_last_btn" to="." method="_on_remove_last_btn_pressed"]
[connection signal="pressed" from="remove_row_at_btn" to="." method="_on_remove_row_at_btn_pressed"]
[connection signal="pressed" from="auto_reload_test_btn" to="." method="_on_auto_reload_test_btn_pressed"]
